# XYXLNT

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.md  README.md
benchmarks/: CMakeLists.txt  spreadsheet-load.cpp  styles.cpp  writer.cpp
benchmarks/disabled/: bufzip.cpp  memory.cpp
benchmarks/microbenchmarks/: CMakeLists.txt
cmake/: XYXlntConfig.cmake.in  cmake_uninstall.cmake.in
include/xyxlnt/: xyxlnt.hpp  xyxlnt_config.hpp
include/xyxlnt/cell/: cell.hpp  cell_reference.hpp  cell_type.hpp  comment.hpp  hyperlink.hpp  index_types.hpp  phonetic_run.hpp  rich_text.hpp  rich_text_run.hpp
include/xyxlnt/drawing/: spreadsheet_drawing.hpp
include/xyxlnt/packaging/: ext_list.hpp  manifest.hpp  relationship.hpp  uri.hpp
include/xyxlnt/styles/: alignment.hpp  border.hpp  color.hpp  conditional_format.hpp  fill.hpp  font.hpp  format.hpp  number_format.hpp  protection.hpp  style.hpp
include/xyxlnt/utils/: calendar.hpp  date.hpp  datetime.hpp  exceptions.hpp  numeric.hpp  optional.hpp  path.hpp  scoped_enum_hash.hpp  time.hpp  timedelta.hpp  variant.hpp
include/xyxlnt/workbook/: calculation_properties.hpp  document_security.hpp  external_book.hpp  metadata_property.hpp  named_range.hpp  streaming_workbook_reader.hpp  streaming_workbook_writer.hpp  theme.hpp  workbook.hpp  workbook_view.hpp  worksheet_iterator.hpp
include/xyxlnt/worksheet/: cell_iterator.hpp  cell_vector.hpp  column_properties.hpp  header_footer.hpp  major_order.hpp  page_margins.hpp  page_setup.hpp  pane.hpp  phonetic_pr.hpp  print_options.hpp  range.hpp  range_iterator.hpp  range_reference.hpp  row_properties.hpp  selection.hpp  sheet_format_properties.hpp  sheet_pr.hpp  sheet_protection.hpp  sheet_view.hpp  worksheet.hpp
python/: CMakeLists.txt  python_streambuf.hpp  setup.py  xlntpyarrow.lib.cpp
python/xlntpyarrow/: __init__.py
samples/: CMakeLists.txt  decrypt.cpp  documentation.cpp  img2xlsx.cpp
samples/disabled/: create.cpp  read.cpp  write.cpp
source/: CMakeLists.txt
source/cell/: cell.cpp  cell_reference.cpp  comment.cpp  hyperlink.cpp  index_types.cpp  phonetic_run.cpp  rich_text.cpp  rich_text_run.cpp
source/detail/: binary.hpp  constants.cpp  constants.hpp  default_case.hpp  unicode.cpp  unicode.hpp
source/detail/cryptography/: aes.cpp  aes.hpp  base64.cpp  base64.hpp  cipher.hpp  compound_document.cpp  compound_document.hpp  encryption_info.cpp  encryption_info.hpp  hash.cpp  hash.hpp  sha.cpp  sha.hpp  value_traits.hpp  xlsx_crypto_consumer.cpp  xlsx_crypto_consumer.hpp  xlsx_crypto_producer.cpp  xlsx_crypto_producer.hpp
source/detail/header_footer/: header_footer_code.cpp  header_footer_code.hpp
source/detail/implementations/: cell_impl.cpp  cell_impl.hpp  conditional_format_impl.hpp  format_impl.hpp  formatting_record.hpp  hyperlink_impl.hpp  style_impl.hpp  stylesheet.hpp  workbook_impl.hpp  worksheet_impl.hpp
source/detail/number_format/: number_formatter.cpp  number_formatter.hpp
source/detail/serialization/: custom_value_traits.cpp  custom_value_traits.hpp  defined_name.hpp  excel_thumbnail.hpp  open_stream.cpp  open_stream.hpp  serialisation_helpers.hpp  vector_streambuf.cpp  vector_streambuf.hpp  xlsx_consumer.cpp  xlsx_consumer.hpp  xlsx_producer.cpp  xlsx_producer.hpp  zstream.cpp  zstream.hpp
source/drawing/: spreadsheet_drawing.cpp
source/packaging/: ext_list.cpp  manifest.cpp  relationship.cpp  uri.cpp
source/styles/: alignment.cpp  border.cpp  color.cpp  conditional_format.cpp  fill.cpp  font.cpp  format.cpp  number_format.cpp  protection.cpp  style.cpp
source/utils/: date.cpp  datetime.cpp  exceptions.cpp  path.cpp  time.cpp  timedelta.cpp  variant.cpp
source/workbook/: named_range.cpp  streaming_workbook_reader.cpp  streaming_workbook_writer.cpp  workbook.cpp  worksheet_iterator.cpp
source/worksheet/: cell_iterator.cpp  cell_vector.cpp  header_footer.cpp  page_margins.cpp  page_setup.cpp  phonetic_pr.cpp  range.cpp  range_iterator.cpp  range_reference.cpp  sheet_protection.cpp  worksheet.cpp
tests/: CMakeLists.txt
tests/cell/: cell_test_suite.cpp  index_types_test_suite.cpp  rich_text_test_suite.cpp
tests/detail/: numeric_util_test_suite.cpp
tests/drawing/: drawing_test_suite.cpp
tests/helpers/: assertions.hpp  path_helper.hpp  temporary_directory.hpp  temporary_file.hpp  timing.hpp  xml_helper.hpp
tests/styles/: alignment_test_suite.cpp  color_test_suite.cpp  conditional_format_test_suite.cpp  fill_test_suite.cpp  number_format_test_suite.cpp  protection_test_suite.cpp  style_test_suite.cpp
tests/utils/: datetime_test_suite.cpp  helper_test_suite.cpp  optional_tests.cpp  path_test_suite.cpp  timedelta_test_suite.cpp  variant_tests.cpp
tests/workbook/: named_range_test_suite.cpp  serialization_test_suite.cpp  workbook_test_suite.cpp
tests/worksheet/: page_setup_test_suite.cpp  range_test_suite.cpp  worksheet_test_suite.cpp
